[gd_scene load_steps=69 format=3 uid="uid://djkwbce86wiw5"]

[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/main_menu.gd" id="1_6cvw2"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/main_menu_container.gd" id="2_vlbgf"]
[ext_resource type="VideoStream" path="res://Finished_Assets/Misc_Assets/Main_Menu_Final_Vid.ogv" id="3_1l38q"]
[ext_resource type="Texture2D" uid="uid://dmyg18xlx0sqk" path="res://Finished_Assets/UI_Assets/UI_Logo_Assets/Logo_Money_Background.png" id="3_7dmma"]
[ext_resource type="Theme" uid="uid://46owog0onc8d" path="res://Finished_Assets/UI_Assets/Buttons_Theme.tres" id="3_nkwy4"]
[ext_resource type="Texture2D" uid="uid://dkrvyhhpojnlj" path="res://Finished_Assets/UI_Assets/UI_Logo_Assets/Logo_1.png" id="4_22yna"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/logo_money_bg.gd" id="4_h10nh"]
[ext_resource type="Texture2D" uid="uid://dm7cfjmlyoykj" path="res://Finished_Assets/UI_Assets/UI_Logo_Assets/Logo_2.png" id="5_gbmlq"]
[ext_resource type="Texture2D" uid="uid://blj4nngqa7qxv" path="res://Finished_Assets/UI_Assets/UI_Logo_Assets/Logo_3.png" id="6_3a14a"]
[ext_resource type="Texture2D" uid="uid://efsm3kytifcy" path="res://Finished_Assets/UI_Assets/UI_Logo_Assets/Logo_Todd_Quarter.png" id="7_nan1p"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/logo.gd" id="8_wta5e"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/logo_quarter.gd" id="9_12msn"]
[ext_resource type="Texture2D" uid="uid://dyvfjpgsclj6s" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Long_Button_1_Green.png" id="14_53g7s"]
[ext_resource type="Texture2D" uid="uid://bwo3rgj8qhaww" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Long_Button_2_Green.png" id="15_723d2"]
[ext_resource type="Texture2D" uid="uid://c73eitfihoqym" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Long_Button_3_Green.png" id="16_y45fm"]
[ext_resource type="Texture2D" uid="uid://bmantknykgtj2" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Small_Button_1_Yellow.png" id="17_vyqnp"]
[ext_resource type="Texture2D" uid="uid://c5hhu5m7j38cx" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Small_Button_2_Yellow.png" id="18_4s47k"]
[ext_resource type="Texture2D" uid="uid://dxbbcxu0xredp" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Small_Button_3_Yellow.png" id="19_nb0uq"]
[ext_resource type="Texture2D" uid="uid://c68tj8neh6f5t" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Small_Button_1_Grey.png" id="20_ufhcy"]
[ext_resource type="Texture2D" uid="uid://bux05y25fe6ia" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Small_Button_2_Grey.png" id="21_g3qcp"]
[ext_resource type="Texture2D" uid="uid://der8dil50tyf2" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Small_Button_3_Grey.png" id="22_vuvqn"]
[ext_resource type="Texture2D" uid="uid://dvtu1iup0omko" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Small_Button_1_Green.png" id="23_t8kbi"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/autoplay.gd" id="25_xdwr4"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/play.gd" id="26_p7suw"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/dlc.gd" id="27_6qlxt"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/quit.gd" id="28_1qbko"]
[ext_resource type="Texture2D" uid="uid://dng17j0hudwb7" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Play_Text_1.png" id="29_x74pk"]
[ext_resource type="Texture2D" uid="uid://dr4ttstv0u8tx" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Play_Text_2.png" id="30_luupb"]
[ext_resource type="Texture2D" uid="uid://no05a6c1t7mi" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Play_Text_3.png" id="31_76nia"]
[ext_resource type="Texture2D" uid="uid://6rgi2vffnq2c" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Options_Text_1.png" id="32_q6bni"]
[ext_resource type="Texture2D" uid="uid://bk8py148ej4ba" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Options_Text_2.png" id="33_6p5b2"]
[ext_resource type="Texture2D" uid="uid://bo4lkesk80eqc" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Options_Text_3.png" id="34_2xsgb"]
[ext_resource type="Texture2D" uid="uid://ckx4x6p6r4dsn" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/DLC_Text_1.png" id="35_r1uvr"]
[ext_resource type="Texture2D" uid="uid://0ycajrxkbgkv" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/DLC_Text_2.png" id="36_b3cdv"]
[ext_resource type="Texture2D" uid="uid://bk0oqtwvfnqm4" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/DLC_Text_3.png" id="37_y6q3h"]
[ext_resource type="Texture2D" uid="uid://bcygvsdrrqlhy" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Exit_Text_1.png" id="38_2h8xa"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/options.gd" id="38_n7sui"]
[ext_resource type="Texture2D" uid="uid://dwsns2qpb4rll" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Exit_Text_2.png" id="39_txrgw"]
[ext_resource type="Texture2D" uid="uid://bsef833wrhr75" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Exit_Text_3.png" id="40_655rh"]
[ext_resource type="VideoStream" path="res://Finished_Assets/Misc_Assets/ResizedFinalLoadsGameIntro.ogv" id="40_law33"]
[ext_resource type="AudioStream" uid="uid://caq824guemqai" path="res://Finished_Assets/Misc_Assets/LoadsOMoneyNewIntroAudio.ogg" id="41_nuqjo"]
[ext_resource type="AudioStream" uid="uid://xewrbtsqvl7f" path="res://Finished_Assets/Song_Assets/Main_Menu_Theme.wav" id="42_3d0r0"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/volume_slider.gd" id="43_qu1nb"]
[ext_resource type="Texture2D" uid="uid://bgbi6iwshytwq" path="res://Finished_Assets/Misc_Assets/BritishTodd.png" id="44_g7pnc"]
[ext_resource type="Texture2D" uid="uid://du13ret8klitg" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Master_Text.png" id="44_m5442"]
[ext_resource type="Texture2D" uid="uid://oknfh3uknn66" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Sound_Effects_Text.png" id="46_5ps82"]
[ext_resource type="Texture2D" uid="uid://bjkfny5iwf8nr" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Music_Text.png" id="47_uw8tj"]
[ext_resource type="Texture2D" uid="uid://yhmx3f8ad44n" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Voice_Lines_Text.png" id="48_bo7qh"]
[ext_resource type="Texture2D" uid="uid://c64vwvxp3h620" path="res://Finished_Assets/UI_Assets/UI_Text_Assets/Sound_Text.png" id="49_pcpdg"]
[ext_resource type="Texture2D" uid="uid://ckfcenk2i71xd" path="res://Finished_Assets/UI_Assets/UI_Button_Assets/Back_Button.png" id="50_xtvkd"]
[ext_resource type="Script" path="res://UI + Menus + Scenes/Main_Menu/back.gd" id="51_bajsj"]
[ext_resource type="AudioStream" uid="uid://be3u0s66cu1fd" path="res://Temp_Assets/Temp_Misc/Luigi Boccherini Minuetto classical.mp3" id="52_vsiyr"]

[sub_resource type="Animation" id="Animation_h7bng"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_api8u"]
resource_name = "Upgrade_Menu_Close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1152, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_l2xpa"]
resource_name = "Upgrade_Menu_Open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1152, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ttrn"]
_data = {
"RESET": SubResource("Animation_h7bng"),
"Upgrade_Menu_Close": SubResource("Animation_api8u"),
"Upgrade_Menu_Open": SubResource("Animation_l2xpa")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_ccaq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_22yna")
}, {
"duration": 1.0,
"texture": ExtResource("5_gbmlq")
}, {
"duration": 1.0,
"texture": ExtResource("6_3a14a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ymb8m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_53g7s")
}, {
"duration": 1.0,
"texture": ExtResource("15_723d2")
}, {
"duration": 1.0,
"texture": ExtResource("16_y45fm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nwwt2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_vyqnp")
}, {
"duration": 1.0,
"texture": ExtResource("18_4s47k")
}, {
"duration": 1.0,
"texture": ExtResource("19_nb0uq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_yx4rx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_ufhcy")
}, {
"duration": 1.0,
"texture": ExtResource("21_g3qcp")
}, {
"duration": 1.0,
"texture": ExtResource("22_vuvqn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3iybp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_t8kbi")
}, {
"duration": 1.0,
"texture": ExtResource("21_g3qcp")
}, {
"duration": 1.0,
"texture": ExtResource("19_nb0uq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_t7nfl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_x74pk")
}, {
"duration": 1.0,
"texture": ExtResource("30_luupb")
}, {
"duration": 1.0,
"texture": ExtResource("31_76nia")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2ghia"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_q6bni")
}, {
"duration": 1.0,
"texture": ExtResource("33_6p5b2")
}, {
"duration": 1.0,
"texture": ExtResource("34_2xsgb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ncgel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_r1uvr")
}, {
"duration": 1.0,
"texture": ExtResource("36_b3cdv")
}, {
"duration": 1.0,
"texture": ExtResource("37_y6q3h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5l5cq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_2h8xa")
}, {
"duration": 1.0,
"texture": ExtResource("39_txrgw")
}, {
"duration": 1.0,
"texture": ExtResource("40_655rh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_s1n6i"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Logo_Video_Sprites/Logo_Quarter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.18, 0.18), Vector2(1.205, 1.205)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Logo_Video_Sprites/Logo_Quarter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(869, 220), Vector2(600, 220)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Logo_Video_Sprites/Logo_Quarter:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jsh80"]
resource_name = "coin_expand"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Logo_Video_Sprites/Logo_Quarter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.18, 0.18), Vector2(1.275, 1.275)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Logo_Video_Sprites/Logo_Quarter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(869, 220), Vector2(600, 300)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Logo_Video_Sprites/Logo_Quarter:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.59014]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rhumt"]
_data = {
"RESET": SubResource("Animation_s1n6i"),
"coin_expand": SubResource("Animation_jsh80")
}

[node name="Main Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cvw2")

[node name="Container" type="Node2D" parent="."]
script = ExtResource("2_vlbgf")

[node name="Upgrade_Menu_Transition" type="AnimationPlayer" parent="Container"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_4ttrn")
}

[node name="Logo_Video_Sprites" type="Node2D" parent="Container"]

[node name="Main_Menu_Vid" type="VideoStreamPlayer" parent="Container/Logo_Video_Sprites"]
offset_right = 1920.0
offset_bottom = 1088.0
scale = Vector2(0.6, 0.594)
stream = ExtResource("3_1l38q")
autoplay = true
expand = true
loop = true

[node name="Logo_Money_BG" type="Sprite2D" parent="Container/Logo_Video_Sprites"]
position = Vector2(575, 241)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_7dmma")
script = ExtResource("4_h10nh")

[node name="Logo" type="AnimatedSprite2D" parent="Container/Logo_Video_Sprites"]
position = Vector2(626, 280)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_ccaq5")
frame = 2
frame_progress = 0.605232
script = ExtResource("8_wta5e")

[node name="Logo_Quarter" type="Sprite2D" parent="Container/Logo_Video_Sprites"]
position = Vector2(869, 220)
scale = Vector2(0.18, 0.18)
texture = ExtResource("7_nan1p")
script = ExtResource("9_12msn")

[node name="Button_Sprites" type="Node2D" parent="Container"]

[node name="Play_Button_Sprite" type="AnimatedSprite2D" parent="Container/Button_Sprites"]
unique_name_in_owner = true
position = Vector2(590, 472)
scale = Vector2(0.2, 0.318841)
sprite_frames = SubResource("SpriteFrames_ymb8m")
frame_progress = 0.805236
script = ExtResource("25_xdwr4")

[node name="Options_Button_Sprite" type="AnimatedSprite2D" parent="Container/Button_Sprites"]
unique_name_in_owner = true
position = Vector2(480, 547.438)
scale = Vector2(0.42, 0.25)
sprite_frames = SubResource("SpriteFrames_nwwt2")
frame = 2
frame_progress = 0.133842
script = ExtResource("25_xdwr4")

[node name="Quit_Button_Sprite" type="AnimatedSprite2D" parent="Container/Button_Sprites"]
unique_name_in_owner = true
position = Vector2(596, 610)
scale = Vector2(0.423092, 0.261943)
sprite_frames = SubResource("SpriteFrames_yx4rx")
script = ExtResource("25_xdwr4")

[node name="DLC_Button_Sprite" type="AnimatedSprite2D" parent="Container/Button_Sprites"]
unique_name_in_owner = true
position = Vector2(710, 546)
scale = Vector2(0.42, 0.25)
sprite_frames = SubResource("SpriteFrames_3iybp")
frame_progress = 0.286396
script = ExtResource("25_xdwr4")

[node name="Play_Text_Sprite" type="AnimatedSprite2D" parent="Container/Button_Sprites"]
position = Vector2(589.75, 475)
scale = Vector2(0.23, 0.178454)
sprite_frames = SubResource("SpriteFrames_t7nfl")
frame_progress = 0.972759
script = ExtResource("25_xdwr4")

[node name="Options_Text_Sprite" type="AnimatedSprite2D" parent="Container/Button_Sprites"]
modulate = Color(0, 0, 0, 1)
position = Vector2(480, 547)
scale = Vector2(0.165625, 0.148026)
sprite_frames = SubResource("SpriteFrames_2ghia")
frame = 2
frame_progress = 0.316187
script = ExtResource("25_xdwr4")

[node name="DLC_Text_Sprite" type="AnimatedSprite2D" parent="Container/Button_Sprites"]
position = Vector2(715, 548)
scale = Vector2(0.15, 0.143092)
sprite_frames = SubResource("SpriteFrames_ncgel")
script = ExtResource("25_xdwr4")

[node name="Exit_Text_Sprite" type="AnimatedSprite2D" parent="Container/Button_Sprites"]
modulate = Color(0, 0, 0, 1)
position = Vector2(594, 608)
scale = Vector2(0.161111, 0.149671)
sprite_frames = SubResource("SpriteFrames_5l5cq")
script = ExtResource("25_xdwr4")

[node name="Play" type="Button" parent="Container/Button_Sprites"]
modulate = Color(1, 1, 1, 0)
offset_left = 366.0
offset_top = 440.0
offset_right = 817.0
offset_bottom = 507.0
text = "Play"
script = ExtResource("26_p7suw")

[node name="DLC" type="Button" parent="Container/Button_Sprites"]
modulate = Color(1, 1, 1, 0)
offset_left = 614.0
offset_top = 523.0
offset_right = 809.0
offset_bottom = 568.0
theme = ExtResource("3_nkwy4")
text = "DLC"
script = ExtResource("27_6qlxt")

[node name="Options" type="Button" parent="Container/Button_Sprites"]
modulate = Color(1, 1, 1, 0)
offset_left = 383.0
offset_top = 526.0
offset_right = 575.0
offset_bottom = 570.0
script = ExtResource("38_n7sui")

[node name="Quit" type="Button" parent="Container/Button_Sprites"]
modulate = Color(1, 1, 1, 0)
offset_left = 497.0
offset_top = 584.0
offset_right = 699.0
offset_bottom = 637.0
theme = ExtResource("3_nkwy4")
text = "Quit"
script = ExtResource("28_1qbko")

[node name="ColorRect" type="ColorRect" parent="Container"]
visible = false
offset_right = 1152.0
offset_bottom = 646.0

[node name="Bootscreen_Vid" type="VideoStreamPlayer" parent="Container"]
visible = false
offset_right = 1152.0
offset_bottom = 656.0
stream = ExtResource("40_law33")
volume_db = -80.0

[node name="Bootscreen_Voicelines" type="AudioStreamPlayer" parent="Container"]
volume_db = 4.0
bus = &"VoiceLines"

[node name="Bootscreen_Vid_SFX" type="AudioStreamPlayer" parent="Container"]
stream = ExtResource("41_nuqjo")
volume_db = -3.0
bus = &"SFX"

[node name="Main_Menu_Theme" type="AudioStreamPlayer" parent="Container"]
unique_name_in_owner = true
stream = ExtResource("42_3d0r0")
volume_db = 2.0
bus = &"Music"

[node name="Upgrade_Menu" type="Node2D" parent="Container"]

[node name="ColorRect2" type="ColorRect" parent="Container/Upgrade_Menu"]
offset_left = -1154.0
offset_bottom = 646.0
color = Color(0.309903, 0.533407, 0.304368, 1)

[node name="British_Todd" type="Sprite2D" parent="Container/Upgrade_Menu"]
position = Vector2(-577, 324)
scale = Vector2(0.601042, 0.6)
texture = ExtResource("44_g7pnc")

[node name="Master_Text" type="Sprite2D" parent="Container/Upgrade_Menu"]
position = Vector2(-1046, 222)
scale = Vector2(0.6, 0.6)
texture = ExtResource("44_m5442")

[node name="Master_Volume" type="HSlider" parent="Container/Upgrade_Menu"]
offset_left = -927.0
offset_top = 142.0
offset_right = -672.0
offset_bottom = 265.0
theme = ExtResource("3_nkwy4")
max_value = 1.0
step = 0.001
script = ExtResource("43_qu1nb")
bus_name = "Master"

[node name="SFX_Text" type="Sprite2D" parent="Container/Upgrade_Menu"]
position = Vector2(-947, 474)
scale = Vector2(0.6, 0.6)
texture = ExtResource("46_5ps82")

[node name="SFX_Volume" type="HSlider" parent="Container/Upgrade_Menu"]
offset_left = -754.0
offset_top = 403.0
offset_right = -602.0
offset_bottom = 502.0
theme = ExtResource("3_nkwy4")
max_value = 1.0
step = 0.001
script = ExtResource("43_qu1nb")
bus_name = "SFX"

[node name="Music_Text" type="Sprite2D" parent="Container/Upgrade_Menu"]
position = Vector2(-1060, 301)
scale = Vector2(0.6, 0.6)
texture = ExtResource("47_uw8tj")

[node name="Music_Volume" type="HSlider" parent="Container/Upgrade_Menu"]
offset_left = -927.0
offset_top = 243.0
offset_right = -672.0
offset_bottom = 342.0
theme = ExtResource("3_nkwy4")
max_value = 1.0
step = 0.001
script = ExtResource("43_qu1nb")
bus_name = "Music"

[node name="Voice_Lines_Text" type="Sprite2D" parent="Container/Upgrade_Menu"]
position = Vector2(-987, 395)
scale = Vector2(0.6, 0.6)
texture = ExtResource("48_bo7qh")

[node name="Voice_Lines_Volume" type="HSlider" parent="Container/Upgrade_Menu"]
offset_left = -807.0
offset_top = 324.0
offset_right = -575.0
offset_bottom = 423.0
theme = ExtResource("3_nkwy4")
max_value = 1.0
step = 0.001
script = ExtResource("43_qu1nb")
bus_name = "VoiceLines"

[node name="Sound_Text" type="Sprite2D" parent="Container/Upgrade_Menu"]
position = Vector2(-883, 90)
scale = Vector2(0.7, 0.7)
texture = ExtResource("49_pcpdg")

[node name="Back_Button_Sprite" type="Sprite2D" parent="Container/Upgrade_Menu"]
unique_name_in_owner = true
position = Vector2(-112, 72)
scale = Vector2(0.662791, 0.608571)
texture = ExtResource("50_xtvkd")

[node name="Back" type="Button" parent="Container/Upgrade_Menu"]
self_modulate = Color(0, 0, 0, 0)
offset_left = -206.0
offset_top = 23.0
offset_right = -16.0
offset_bottom = 121.0
script = ExtResource("51_bajsj")

[node name="British_Music" type="AudioStreamPlayer" parent="Container/Upgrade_Menu"]
unique_name_in_owner = true
stream = ExtResource("52_vsiyr")
volume_db = -80.0
bus = &"Music"

[node name="Random_Todd_Lines" type="AudioStreamPlayer" parent="Container/Upgrade_Menu"]
unique_name_in_owner = true
volume_db = 8.0
bus = &"VoiceLines"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rhumt")
}

[connection signal="pressed" from="Container/Button_Sprites/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Container/Button_Sprites/DLC" to="." method="_on_dlc_pressed"]
[connection signal="pressed" from="Container/Button_Sprites/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Container/Button_Sprites/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Container/Upgrade_Menu/Back" to="." method="_on_back_pressed"]
